Stop hiding :target behind header
A cheeky hack for the majority of browsers. Doesn’t resolve the cast
timestamps vanishing behind the player!

--- a/css/style.css
+++ b/css/style.css
@@ -329,3 +329,6 @@ article.steam-parsed br { content: " "; display: block; line-height: .5em; heigh
 #hitbox-viewer iframe { position: absolute; width:100%; height: 100%; left:0; top:0}
 #twitch-viewer { position: relative; width: 100%; height:0; padding-bottom:59% }
 #twitch-viewer object { position: absolute; width:100%; height: 100%; left:0; top:0}
+
+/* stop hiding our target behind the header */
+:target::before { content:"シ"; display: block; visibility:hidden; padding-top: 60px; margin-top: -60px; height:1px; width:1px }
